chore: update swagger and README.md
